--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11",
     "axios": "^0.23.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
